--- a/Client/src/Home/Home.module.css
+++ b/Client/src/Home/Home.module.css
@@ -1,11 +1,37 @@
 .container{
-  display: flex;
-  margin-top: 150px;
-    width: 90vw;
-    height: 90vh;
+  display:block;
+
+  margin-top: 120px;
+    /* width: 90vw;
+    height: 90vh; */
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-  
+    
+}
+@keyframes slideRight {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
 
+.container h1 {
+  text-align: center;
+  color: blue;
+  text-shadow: 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.589);
+  animation: animate__fadeInLeft 1s ease-in-out, slideRight 2s ease-in-out;
+  animation-fill-mode: forwards;
+}
+
+.cards{
+  display:flex;
+  /* margin: 2em;
+  width: 90vw;
+  height: 90vh;  */
+  flex-direction: row;
+  /* flex-wrap: wrap; */
+  justify-content:space-around;
 }
