--- a/Client/src/Landing/LandingPage.module.css
+++ b/Client/src/Landing/LandingPage.module.css
@@ -1,9 +1,9 @@
 .container{
     display: flex;
-    /* flex-direction: column; 
-    align-items: center;*/
-    color: rgba(109, 45, 45, 0.863);
-    /* background-color: rgb(255, 255, 255); */
+    align-items: center; 
+     /*flex-direction: column; */
+   /* color: rgba(109, 45, 45, 0.863);
+     background-color: rgb(255, 255, 255); */
 /*margin: 25%;
  background-image: url("../asset/image/quimica-removebg-preview.png"); */
 }
@@ -11,9 +11,13 @@
    transition-duration: 300ms;
   color: aqua;
   background-color: rgb(0, 47, 255);
- border: 2px solid black; 
   border-radius: 5px;
+  padding: 5px ;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
   /* position: absolute;
+  border: 2px solid black; 
   left: 0;
   top: 0;
   width: 100%;
@@ -35,4 +39,10 @@
   width: 100px;
   height: 100px;
   justify-content: flex-start;
+  }
+
+  .image{
+    display: flex;
+    border-radius: 20px;
+    width: 50rem;
   }
