--- a/Client/src/Landing/LandingPage.module.css
+++ b/Client/src/Landing/LandingPage.module.css
@@ -7,7 +7,7 @@
 /*margin: 25%;
  background-image: url("../asset/image/quimica-removebg-preview.png"); */
 }
-.btn{
+/* .btn{
    transition-duration: 300ms;
   color: aqua;
   background-color: rgb(0, 47, 255);
@@ -15,7 +15,7 @@
   padding: 5px ;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: flex-end; */
   /* position: absolute;
   border: 2px solid black; 
   left: 0;
@@ -25,14 +25,14 @@
   z-index: 2;
   display: flex;
   justify-content: center;
-  align-items: center; */
-}
-.btn:hover{
+  align-items: center; 
+}*/
+/* .btn:hover{
   transition-duration: 300ms;
   color: rgb(0, 0, 0);
   background-color: rgb(255, 255, 255);
   border: 2px solid rgb(0, 0, 0);
-  border-radius: 5px;}
+  border-radius: 5px;} */
 
 .logo{
   display: flex;
@@ -45,4 +45,66 @@
     display: flex;
     border-radius: 20px;
     width: 50rem;
+  }
+
+  .btn2 {
+    position: relative;
+    display: inline-block;
+    padding: 15px 30px;
+    border: 2px solid #fefefe;
+    text-transform: uppercase;
+    color: #fefefe;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 20px;
+    transition: 0.3s;
+  }
+  
+  .btn2::before {
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    width: calc(100% + 4px);
+    height: calc(100% - -2px);
+    background-color: #212121;
+    transition: 0.3s ease-out;
+    transform: scaleY(1);
+  }
+  
+  .btn2::after {
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    width: calc(100% + 4px);
+    height: calc(100% - 50px);
+    background-color: #212121;
+    transition: 0.3s ease-out;
+    transform: scaleY(1);
+  }
+  
+  .btn2:hover::before {
+    transform: translateY(-25px);
+    height: 0;
+  }
+  
+  .btn2:hover::after {
+    transform: scaleX(0);
+    transition-delay: 0.15s;
+  }
+  
+  .btn2:hover {
+    border: 2px solid #fefefe;
+  }
+  
+  .btn2 span {
+    position: relative;
+    z-index: 3;
+  }
+  
+  button {
+    text-decoration: none;
+    border: none;
+    background-color: transparent;
   }
