--- a/Client/src/Landing/LandingPage.module.css
+++ b/Client/src/Landing/LandingPage.module.css
@@ -38,6 +38,7 @@
 
 .logo{
   display: flex;
+  margin-top: 60px;
   position: absolute;
   z-index: 2;
   justify-content: center;
@@ -45,7 +46,7 @@
 
   .transparencia {
     
-    opacity: 0.5; /* Cambia el valor según la transparencia deseada */
+    opacity: 0.7; /* Cambia el valor según la transparencia deseada */
     width: 100%;
     height: 40rem;
     
